--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,14 @@
     "craftcms/cms": "^3.0.0",
     "vlucas/phpdotenv": "^2.4.0",
     "craftcms/redactor": "2.1.6",
-    "craftcms/contact-form": "2.2.3"
+    "craftcms/contact-form": "2.2.3",
+    "php": "^5.3.0",
+		"ext-mbstring": "*",
+		"ext-imagick": "*"
   },
+	"require-dev": {
+		"heroku/heroku-buildpack-php": "*"
+	},
   "autoload": {
     "psr-4": {
       "modules\\": "modules/"
